-- =====================================================================
-- Zedral · M3 Shopfloor Planning & Management — Reference Schema (PostgreSQL 15+)
-- Status: v1 for build (plan -> schedule -> execute -> feed back).
--         Posture-configurable (ADHERENCE | SCHEDULING | SYSTEM_OF_RECORD).
--         Optimisation/AI hooks present, build deferred (see deep-plan §8).
-- Conventions: follows canonical DDL spec (02_CanonicalDataModel_Spec §5):
--   lower_snake_case · surrogate BIGINT ids · UUID tenant_id · TIMESTAMPTZ (UTC)
--   JSONB `ext` extension namespace · FK to canon.* · units embedded in column name.
-- Assumes the canonical core already exists:
--   canon.equipment_node(node_id)  -- ISA-95 hierarchy incl. WORK_CENTER & WORK_UNIT
--   canon.event(event_id)          -- Event Spine; production_count is a specialization
--   canon.shift(shift_id)          -- shift/calendar (defines Planned Production Time)
--   canon.personnel(person_id)     -- crew / supervisors
--   canon.cost_rate(rate_id ...)   -- effective-dated rates (D7)
-- SOFT-REFERENCE RULE: canon.event.order_ref carries ops.production_order.order_id
--   as a plain value (NO cross-schema hard FK) so canon stays independent of M3 —
--   the same independence rule M2 uses for downtime classification.
-- =====================================================================

CREATE SCHEMA IF NOT EXISTS ops;
SET search_path = ops, canon, public;

-- ---------------------------------------------------------------------
-- 0. Enumerated types
-- ---------------------------------------------------------------------
CREATE TYPE ops.planning_posture   AS ENUM ('ADHERENCE','SCHEDULING','SYSTEM_OF_RECORD');
CREATE TYPE ops.material_type      AS ENUM ('RAW','WIP','FINISHED','CONSUMABLE');
CREATE TYPE ops.demand_type        AS ENUM ('FORECAST','CUSTOMER_ORDER','PIR','SAFETY_STOCK');
CREATE TYPE ops.order_source       AS ENUM ('ERP_IMPORT','MRP_GENERATED','MANUAL','M1_PLAN_CSV');
CREATE TYPE ops.order_status       AS ENUM ('PLANNED','FIRMED','RELEASED','SCHEDULED','DISPATCHED','IN_PROGRESS','COMPLETED','CLOSED','CANCELLED');
CREATE TYPE ops.operation_status   AS ENUM ('PENDING','DISPATCHED','IN_PROGRESS','CONFIRMED','SKIPPED');
CREATE TYPE ops.schedule_status    AS ENUM ('PROPOSED','COMMITTED','SUPERSEDED');
CREATE TYPE ops.confirmation_type  AS ENUM ('SETUP','PARTIAL','FINAL','SCRAP','REWORK');
CREATE TYPE ops.capacity_basis     AS ENUM ('MACHINE_TIME','LABOR_TIME','THROUGHPUT_QTY','FURNACE_CHARGE');
CREATE TYPE ops.handover_status    AS ENUM ('ACCUMULATING','DRAFTED','REVIEWED','SIGNED_OFF');
CREATE TYPE ops.carryover_kind     AS ENUM ('OPEN_ORDER','WIP','STOPPAGE','QUALITY_HOLD','SAFETY','INSTRUCTION');
CREATE TYPE ops.mrp_run_type       AS ENUM ('REGENERATIVE','NET_CHANGE');

-- ---------------------------------------------------------------------
-- 1. Per-tenant planning configuration (the posture switch, §5)
-- ---------------------------------------------------------------------
CREATE TABLE ops.planning_config (
  tenant_id        UUID PRIMARY KEY,
  posture          ops.planning_posture NOT NULL DEFAULT 'SCHEDULING',
  schedule_grain   TEXT NOT NULL DEFAULT 'WORK_CENTER_SHIFT',  -- WORK_CENTER_SHIFT | MACHINE_MINUTE
  mrp_enabled      BOOLEAN NOT NULL DEFAULT FALSE,             -- TRUE only for SYSTEM_OF_RECORD
  optimiser_enabled BOOLEAN NOT NULL DEFAULT FALSE,            -- future scope (§8); gated by readiness
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
COMMENT ON TABLE  ops.planning_config IS 'Per-tenant planning posture; selects which engine stages Zedral generates vs ingests (deep-plan §5).';
COMMENT ON COLUMN ops.planning_config.posture IS 'ADHERENCE=ingest finished schedule; SCHEDULING=own detailed scheduling; SYSTEM_OF_RECORD=own MPS/MRP.';

-- ---------------------------------------------------------------------
-- 2. Material & BOM (canonical masters M3 brings to life)
-- ---------------------------------------------------------------------
CREATE TABLE ops.material (
  material_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  sku              TEXT NOT NULL,
  name             TEXT NOT NULL,
  material_type    ops.material_type NOT NULL,
  base_uom         TEXT NOT NULL,                  -- canonical base unit (e.g. 'MT', 'EA')
  grade_ref        TEXT,                           -- maps to M1 grade master where present
  native_code      TEXT,
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, sku)
);
COMMENT ON TABLE ops.material IS 'Material/Product master (raw/WIP/finished). Canonical entity M3 populates; FK target for orders & BOM.';

CREATE TABLE ops.bom_line (
  bom_line_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  parent_material_ref BIGINT NOT NULL REFERENCES ops.material(material_id),
  component_material_ref BIGINT NOT NULL REFERENCES ops.material(material_id),
  qty_per          NUMERIC NOT NULL CHECK (qty_per > 0),
  component_uom    TEXT NOT NULL,
  scrap_pct        NUMERIC NOT NULL DEFAULT 0 CHECK (scrap_pct >= 0),
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_bom_parent ON ops.bom_line (tenant_id, parent_material_ref);

-- ---------------------------------------------------------------------
-- 3. Routing & operations (how a material is made; the path orders follow)
-- ---------------------------------------------------------------------
CREATE TABLE ops.routing (
  routing_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  version          INT NOT NULL DEFAULT 1,
  is_active        BOOLEAN NOT NULL DEFAULT TRUE,
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, material_ref, version)
);

CREATE TABLE ops.routing_operation (
  routing_operation_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  routing_ref      BIGINT NOT NULL REFERENCES ops.routing(routing_id),
  seq_no           INT NOT NULL,                   -- order of operations in the route
  work_center_ref  BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  operation_name   TEXT NOT NULL,                  -- e.g. 'PICKLING', 'COLD_ROLLING', 'ANNEALING'
  setup_minutes_std NUMERIC NOT NULL DEFAULT 0,
  run_minutes_per_unit NUMERIC NOT NULL DEFAULT 0, -- standard run time per base uom
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, routing_ref, seq_no)
);
CREATE INDEX ix_routeop_wc ON ops.routing_operation (tenant_id, work_center_ref);

-- ---------------------------------------------------------------------
-- 4. Work-centre capacity & sequence-dependent setup (finite-capacity model, §6)
-- ---------------------------------------------------------------------
CREATE TABLE ops.work_center_capacity (
  capacity_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  work_center_ref  BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  shift_ref        BIGINT REFERENCES canon.shift(shift_id),   -- capacity per shift bucket (NULL = generic)
  basis            ops.capacity_basis NOT NULL DEFAULT 'MACHINE_TIME',
  available_minutes NUMERIC,                       -- available time in the bucket
  available_qty    NUMERIC,                        -- throughput-based capacity (e.g. furnace charges)
  efficiency_pct   NUMERIC NOT NULL DEFAULT 100 CHECK (efficiency_pct > 0),
  effective_from   DATE NOT NULL,
  effective_to     DATE,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_cap_wc ON ops.work_center_capacity (tenant_id, work_center_ref, effective_from);

-- sequence-dependent setup/changeover cost matrix (steel: width wide->narrow, roll change)
CREATE TABLE ops.setup_matrix (
  setup_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  work_center_ref  BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  from_state       TEXT NOT NULL,                  -- attribute of outgoing job (e.g. width band 'W1200')
  to_state         TEXT NOT NULL,                  -- attribute of incoming job
  setup_minutes    NUMERIC NOT NULL DEFAULT 0,
  setup_cost       NUMERIC,                        -- optional explicit cost
  is_forbidden     BOOLEAN NOT NULL DEFAULT FALSE, -- e.g. narrow->wide w/o roll change forbidden
  rule_note        TEXT,                           -- 'width increase forces roll change'
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, work_center_ref, from_state, to_state)
);
COMMENT ON TABLE ops.setup_matrix IS 'Sequence-dependent setup transitions; encodes steel campaign rules (wide->narrow). Substrate for the future optimiser (§8).';

-- ---------------------------------------------------------------------
-- 5. Demand & MPS (Posture C generates; A/B ingest)
-- ---------------------------------------------------------------------
CREATE TABLE ops.demand_forecast (
  demand_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  demand_type      ops.demand_type NOT NULL,
  qty              NUMERIC NOT NULL,
  uom              TEXT NOT NULL,
  demand_date      DATE NOT NULL,
  customer_ref     TEXT,                           -- maps to M1/canon customer master where present
  source           ops.order_source NOT NULL DEFAULT 'ERP_IMPORT',
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_demand_mat ON ops.demand_forecast (tenant_id, material_ref, demand_date);

CREATE TABLE ops.mps_line (
  mps_id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  period_start     DATE NOT NULL,
  period_end       DATE NOT NULL,
  planned_qty      NUMERIC NOT NULL,
  uom              TEXT NOT NULL,
  source           ops.order_source NOT NULL DEFAULT 'MRP_GENERATED',
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_mps_mat ON ops.mps_line (tenant_id, material_ref, period_start);

-- ---------------------------------------------------------------------
-- 6. MRP run log + on-hand stock (Posture C netting)
-- ---------------------------------------------------------------------
CREATE TABLE ops.mrp_run (
  mrp_run_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  run_type         ops.mrp_run_type NOT NULL DEFAULT 'NET_CHANGE',
  started_ts       TIMESTAMPTZ NOT NULL DEFAULT now(),
  finished_ts      TIMESTAMPTZ,
  planned_order_count INT,
  triggered_by     BIGINT REFERENCES canon.personnel(person_id),
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);

CREATE TABLE ops.material_stock (
  stock_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  site_ref         BIGINT REFERENCES canon.equipment_node(node_id),
  on_hand_qty      NUMERIC NOT NULL DEFAULT 0,
  allocated_qty    NUMERIC NOT NULL DEFAULT 0,
  reorder_point    NUMERIC,
  lead_time_days   INT,
  as_of_ts         TIMESTAMPTZ NOT NULL DEFAULT now(),  -- source-owned in A/B; M3-owned in C
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, material_ref, site_ref)
);
COMMENT ON TABLE ops.material_stock IS 'On-hand / allocated balances for MRP netting (Posture C). In A/B these are read from ERP/WMS, not authored here.';

-- ---------------------------------------------------------------------
-- 7. Planned order (MRP output) -> Production order (released)
-- ---------------------------------------------------------------------
CREATE TABLE ops.planned_order (
  planned_order_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  mps_ref          BIGINT REFERENCES ops.mps_line(mps_id),
  mrp_run_ref      BIGINT REFERENCES ops.mrp_run(mrp_run_id),
  planned_qty      NUMERIC NOT NULL,
  uom              TEXT NOT NULL,
  need_date        DATE NOT NULL,
  is_firmed        BOOLEAN NOT NULL DEFAULT FALSE,
  source           ops.order_source NOT NULL DEFAULT 'MRP_GENERATED',
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_plord_mat ON ops.planned_order (tenant_id, material_ref, need_date);

CREATE TABLE ops.production_order (
  order_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  order_no         TEXT NOT NULL,                  -- human/ERP order number
  material_ref     BIGINT NOT NULL REFERENCES ops.material(material_id),
  routing_ref      BIGINT REFERENCES ops.routing(routing_id),
  planned_order_ref BIGINT REFERENCES ops.planned_order(planned_order_id),
  order_status     ops.order_status NOT NULL DEFAULT 'PLANNED',
  planned_qty      NUMERIC NOT NULL,
  good_qty         NUMERIC NOT NULL DEFAULT 0,
  scrap_qty        NUMERIC NOT NULL DEFAULT 0,
  uom              TEXT NOT NULL,
  priority         SMALLINT NOT NULL DEFAULT 5,    -- 1=highest
  due_ts           TIMESTAMPTZ,
  release_ts       TIMESTAMPTZ,
  completed_ts     TIMESTAMPTZ,
  m1_coil_ref      TEXT,                           -- soft link to M1 COIL_NO spine where applicable
  source           ops.order_source NOT NULL DEFAULT 'ERP_IMPORT',
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, order_no)
);
CREATE INDEX ix_po_status ON ops.production_order (tenant_id, order_status, due_ts);
COMMENT ON COLUMN ops.production_order.order_id IS 'Value carried by canon.event.order_ref (soft reference; no cross-schema hard FK).';

CREATE TABLE ops.production_operation (
  operation_id     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  order_ref        BIGINT NOT NULL REFERENCES ops.production_order(order_id),
  routing_operation_ref BIGINT REFERENCES ops.routing_operation(routing_operation_id),
  seq_no           INT NOT NULL,
  work_center_ref  BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  operation_status ops.operation_status NOT NULL DEFAULT 'PENDING',
  planned_qty      NUMERIC,
  good_qty         NUMERIC NOT NULL DEFAULT 0,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, order_ref, seq_no)
);
CREATE INDEX ix_prodop_wc ON ops.production_operation (tenant_id, work_center_ref, operation_status);

-- ---------------------------------------------------------------------
-- 8. Detailed schedule (finite-capacity sequence) + dispatch (M3b)
-- ---------------------------------------------------------------------
CREATE TABLE ops.schedule_entry (
  sched_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  order_ref        BIGINT NOT NULL REFERENCES ops.production_order(order_id),
  operation_ref    BIGINT REFERENCES ops.production_operation(operation_id),
  work_center_ref  BIGINT NOT NULL REFERENCES canon.equipment_node(node_id),
  shift_ref        BIGINT REFERENCES canon.shift(shift_id),
  sequence_no      INT NOT NULL,                   -- position in the work-centre sequence
  planned_start_ts TIMESTAMPTZ,
  planned_end_ts   TIMESTAMPTZ,
  setup_minutes    NUMERIC NOT NULL DEFAULT 0,     -- from setup_matrix given the predecessor
  status           ops.schedule_status NOT NULL DEFAULT 'PROPOSED',
  scenario_tag     TEXT,                           -- what-if scenario name; NULL = committed plan
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_sched_wc_seq ON ops.schedule_entry (tenant_id, work_center_ref, sequence_no);
CREATE INDEX ix_sched_order  ON ops.schedule_entry (tenant_id, order_ref);

-- ---------------------------------------------------------------------
-- 9. Production confirmation (actuals -> books a canon ProductionCount, §12)
-- ---------------------------------------------------------------------
CREATE TABLE ops.production_confirmation (
  conf_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  order_ref        BIGINT NOT NULL REFERENCES ops.production_order(order_id),
  operation_ref    BIGINT REFERENCES ops.production_operation(operation_id),
  conf_type        ops.confirmation_type NOT NULL DEFAULT 'PARTIAL',
  work_center_ref  BIGINT REFERENCES canon.equipment_node(node_id),
  shift_ref        BIGINT REFERENCES canon.shift(shift_id),
  operator_ref     BIGINT REFERENCES canon.personnel(person_id),
  good_qty         NUMERIC NOT NULL DEFAULT 0,
  scrap_qty        NUMERIC NOT NULL DEFAULT 0,
  rework_qty       NUMERIC NOT NULL DEFAULT 0,
  setup_minutes    NUMERIC NOT NULL DEFAULT 0,     -- actual setup (calibrates setup_matrix / optimiser)
  run_minutes      NUMERIC NOT NULL DEFAULT 0,
  confirmed_ts     TIMESTAMPTZ NOT NULL DEFAULT now(),
  canon_event_ref  BIGINT,                         -- soft link to canon.event (the ProductionCount row)
  m1_source_ref    TEXT,                           -- provenance to M1 prod_* capture
  source_ref       TEXT,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_conf_order ON ops.production_confirmation (tenant_id, order_ref, confirmed_ts);
COMMENT ON TABLE ops.production_confirmation IS 'Execution actuals. The good/scrap qty is recorded once as a canon ProductionCount; M3 contextualises (attainment), M4 aggregates (OEE). No double count (§12).';

-- ---------------------------------------------------------------------
-- 10. Shift handover (M3a) — header, carryover lines, notes
-- ---------------------------------------------------------------------
CREATE TABLE ops.shift_handover (
  handover_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  site_ref         BIGINT REFERENCES canon.equipment_node(node_id),
  area_ref         BIGINT REFERENCES canon.equipment_node(node_id),
  shift_out_ref    BIGINT REFERENCES canon.shift(shift_id),
  shift_in_ref     BIGINT REFERENCES canon.shift(shift_id),
  outgoing_supervisor_ref BIGINT REFERENCES canon.personnel(person_id),
  incoming_supervisor_ref BIGINT REFERENCES canon.personnel(person_id),
  status           ops.handover_status NOT NULL DEFAULT 'ACCUMULATING',
  planned_qty      NUMERIC,                        -- shift plan vs ...
  produced_qty     NUMERIC,                        -- ... shift actual (plan-vs-actual feedback)
  oee_pct          NUMERIC,                        -- shift OEE snapshot (from M4)
  variance_note    TEXT,
  drafted_ts       TIMESTAMPTZ,
  signed_off_ts    TIMESTAMPTZ,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_handover_shift ON ops.shift_handover (tenant_id, shift_out_ref);
COMMENT ON TABLE ops.shift_handover IS 'Graduates M1 first-class handover to the platform; the no-orphan guarantee + plan-vs-actual feedback into planning (deep-plan §7).';

CREATE TABLE ops.handover_carryover (
  carryover_id     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  handover_ref     BIGINT NOT NULL REFERENCES ops.shift_handover(handover_id),
  kind             ops.carryover_kind NOT NULL,
  order_ref        BIGINT REFERENCES ops.production_order(order_id),     -- open order / WIP
  asset_ref        BIGINT REFERENCES canon.equipment_node(node_id),     -- degraded asset / stoppage
  description      TEXT NOT NULL,
  is_mandatory     BOOLEAN NOT NULL DEFAULT FALSE,  -- safety/exception items that cannot be skipped
  acknowledged     BOOLEAN NOT NULL DEFAULT FALSE,  -- incoming shift acknowledged
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb
);
CREATE INDEX ix_carryover_handover ON ops.handover_carryover (tenant_id, handover_ref);

-- ---------------------------------------------------------------------
-- 11. KPI rollup mart (served to UIL / Reporting; reconciles with M4)
-- ---------------------------------------------------------------------
CREATE TABLE ops.kpi_plan_daily (
  kpi_id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tenant_id        UUID NOT NULL,
  work_center_ref  BIGINT REFERENCES canon.equipment_node(node_id),
  kpi_date         DATE NOT NULL,
  schedule_attainment_pct NUMERIC,
  qty_attainment_pct      NUMERIC,
  otif_pct                NUMERIC,
  throughput_qty          NUMERIC,
  capacity_util_pct       NUMERIC,
  setup_ratio_pct         NUMERIC,
  changeover_count        INT,
  wip_avg_qty             NUMERIC,
  late_order_cost         NUMERIC,                 -- priced via canon.cost_rate effective at date (D7)
  idle_capacity_cost      NUMERIC,
  ext              JSONB NOT NULL DEFAULT '{}'::jsonb,
  UNIQUE (tenant_id, work_center_ref, kpi_date)
);
COMMENT ON TABLE ops.kpi_plan_daily IS 'Daily planning-KPI mart. OEE-adjacent figures reconcile to M4 (same ProductionCount truth).';

-- ---------------------------------------------------------------------
-- 12. Convenience view: committed dispatch list per work centre / shift
-- ---------------------------------------------------------------------
CREATE VIEW ops.v_dispatch_list AS
SELECT s.tenant_id,
       s.work_center_ref,
       s.shift_ref,
       s.sequence_no,
       s.order_ref,
       po.order_no,
       po.material_ref,
       s.planned_start_ts,
       s.planned_end_ts,
       s.setup_minutes,
       po.priority
FROM ops.schedule_entry s
JOIN ops.production_order po ON po.order_id = s.order_ref
WHERE s.status = 'COMMITTED' AND s.scenario_tag IS NULL
ORDER BY s.tenant_id, s.work_center_ref, s.shift_ref, s.sequence_no;

-- =====================================================================
-- End M3 reference schema. ~20 tables + 1 view, ops schema, FK to canon.*.
-- Optimisation/AI (deep-plan §8) reuses setup_matrix + work_center_capacity
-- + production_confirmation actuals — no re-model required to switch it on.
-- =====================================================================
