erDiagram
  MATERIAL ||--o{ BOM_LINE : "componentized by"
  MATERIAL ||--o{ ROUTING : "made via"
  ROUTING ||--o{ ROUTING_OPERATION : "lists"
  ROUTING_OPERATION }o--|| WORK_CENTER : "performed at"
  WORK_CENTER ||--o{ WORK_CENTER_CAPACITY : "has"
  WORK_CENTER ||--o{ SETUP_MATRIX : "transition rules"
  DEMAND_FORECAST ||--o{ MPS_LINE : "drives"
  MPS_LINE ||--o{ PLANNED_ORDER : "nets to (MRP)"
  PLANNED_ORDER ||--o| PRODUCTION_ORDER : "released as"
  PRODUCTION_ORDER ||--o{ PRODUCTION_OPERATION : "routes to"
  PRODUCTION_ORDER ||--o{ SCHEDULE_ENTRY : "scheduled as"
  SCHEDULE_ENTRY }o--|| WORK_CENTER : "loads"
  PRODUCTION_ORDER ||--o{ PRODUCTION_CONFIRMATION : "confirmed by"
  SHIFT ||--o{ SHIFT_HANDOVER : "bounded by"
  SHIFT_HANDOVER ||--o{ HANDOVER_CARRYOVER : "carries"
  HANDOVER_CARRYOVER }o--|| PRODUCTION_ORDER : "open WIP"
  PRODUCTION_ORDER }o--|| MATERIAL : "produces"
  COST_RATE ||--o{ PRODUCTION_ORDER : "prices lateness/idle"

  PRODUCTION_ORDER {
    bigint order_id PK
    bigint material_ref FK
    string order_status "planned|firmed|released|scheduled|dispatched|in_progress|completed|closed"
    numeric planned_qty
    numeric good_qty
    timestamptz due_ts
    bigint tenant_id
  }
  SCHEDULE_ENTRY {
    bigint sched_id PK
    bigint order_ref FK
    bigint work_center_ref FK
    int sequence_no
    timestamptz planned_start_ts
    timestamptz planned_end_ts
    numeric setup_minutes
  }
  PRODUCTION_CONFIRMATION {
    bigint conf_id PK
    bigint order_ref FK
    bigint operation_ref FK
    numeric good_qty
    numeric scrap_qty
    numeric run_minutes
    bigint shift_ref FK
  }
  SETUP_MATRIX {
    bigint setup_id PK
    bigint work_center_ref FK
    string from_state
    string to_state
    numeric setup_minutes
    numeric setup_cost
  }
  SHIFT_HANDOVER {
    bigint handover_id PK
    bigint shift_out_ref FK
    bigint shift_in_ref FK
    string status "drafted|reviewed|signed_off"
    bigint tenant_id
  }
